fix: update project to use JDK 17 and adjust related configurations