@@ -51,7 +51,7 @@ public class RID implements Identifiable, Comparable<Object>, Serializable {
 
     final String stripped = value.substring(1);
     final List<String> parts = CodeUtils.split(stripped, ':', 2);
-    this.bucketId = Integer.parseInt(parts.getFirst());
+    this.bucketId = Integer.parseInt(parts.get(0));
     this.offset = Long.parseLong(parts.get(1));
   }
 
@@ -82,7 +82,7 @@ public class RID implements Identifiable, Comparable<Object>, Serializable {
   public static boolean is(final String valueAsString) {
     if (valueAsString.length() > 3 && valueAsString.charAt(0) == '#') {
       final List<String> parts = CodeUtils.split(valueAsString.substring(1), ':', 3);
-      return parts.size() == 2 && NumberUtils.isIntegerNumber(parts.getFirst()) && NumberUtils.isIntegerNumber(parts.get(1));
+      return parts.size() == 2 && NumberUtils.isIntegerNumber(parts.get(0)) && NumberUtils.isIntegerNumber(parts.get(1));
     }
     return false;
   }
