@@ -184,7 +184,7 @@ public class TransactionManager {
     final long begin = System.currentTimeMillis();
 
     while (true) {
-      final WALFile file = activeWALFilePool[(int) (Thread.currentThread().threadId() % activeWALFilePool.length)];
+      final WALFile file = activeWALFilePool[(int) (Thread.currentThread().getId() % activeWALFilePool.length)];
 
       if (file != null && file.acquire(() -> {
         file.writeTransactionToFile(database, pages, sync, file, txId, bufferChanges);
@@ -599,7 +599,7 @@ public class TransactionManager {
 
     // OK: ALL LOCKED
     LogManager.instance()
-        .log(this, Level.FINE, "Locked files %s (threadId=%d)", null, orderedFilesIds, Thread.currentThread().threadId());
+        .log(this, Level.FINE, "Locked files %s (threadId=%d)", null, orderedFilesIds, Thread.currentThread().getId());
     // RETURN ONLY THE LOCKED FILES
     return lockedFiles;
   }
@@ -635,7 +635,7 @@ public class TransactionManager {
     // OK: ALL LOCKED
     if (LogManager.instance().isDebugEnabled())
       LogManager.instance().log(this, Level.FINE, "Locked files %s (threadId=%d)", null, Arrays.toString(fileIds),
-          Thread.currentThread().threadId());
+          Thread.currentThread().getId());
     return lockedFiles;
   }
 
@@ -645,7 +645,7 @@ public class TransactionManager {
         unlockFile(fileId, requester);
 
       LogManager.instance()
-          .log(this, Level.FINE, "Unlocked files %s (threadId=%d)", null, lockedFileIds, Thread.currentThread().threadId());
+          .log(this, Level.FINE, "Unlocked files %s (threadId=%d)", null, lockedFileIds, Thread.currentThread().getId());
     }
   }
 
