@@ -185,8 +185,8 @@ public class AlgoAllSimplePaths extends AbstractAlgoProcedure {
 
         findPaths(neighbor, target, relTypes, skipRelTypes, remainingDepth - 1, currentPath, visited, allPaths, context);
 
-        currentPath.removeLast();
-        currentPath.removeLast();
+        currentPath.remove(currentPath.size() - 1);
+        currentPath.remove(currentPath.size() - 1);
         visited.remove(neighborId);
       }
     }
@@ -209,8 +209,8 @@ public class AlgoAllSimplePaths extends AbstractAlgoProcedure {
 
         findPaths(neighbor, target, relTypes, skipRelTypes, remainingDepth - 1, currentPath, visited, allPaths, context);
 
-        currentPath.removeLast();
-        currentPath.removeLast();
+        currentPath.remove(currentPath.size() - 1);
+        currentPath.remove(currentPath.size() - 1);
         visited.remove(neighborId);
       }
     }
