@@ -345,12 +345,12 @@ public class SelectExecutionPlanner {
    */
   protected static Projection translateDistinct(Projection projection) {
     if (projection != null && projection.getItems().size() == 1) {
-      if (isDistinct(projection.getItems().getFirst())) {
+      if (isDistinct(projection.getItems().get(0))) {
         projection = projection.copy();
-        final ProjectionItem item = projection.getItems().getFirst();
+        final ProjectionItem item = projection.getItems().get(0);
         final FunctionCall function = ((BaseExpression) item.getExpression().getMathExpression()).getIdentifier().getLevelZero()
             .getFunctionCall();
-        final Expression exp = function.getParams().getFirst();
+        final Expression exp = function.getParams().get(0);
         final ProjectionItem resultItem = new ProjectionItem(-1);
         resultItem.setAlias(item.getAlias());
         resultItem.setExpression(exp.copy());
@@ -421,7 +421,7 @@ public class SelectExecutionPlanner {
     if (!isMinimalQuery(info))
       return false;
 
-    result.chain(new CountFromTypeStep(info.target.toString(), info.projection.getAllAliases().getFirst(), context));
+    result.chain(new CountFromTypeStep(info.target.toString(), info.projection.getAllAliases().get(0), context));
     return true;
   }
 
@@ -443,7 +443,7 @@ public class SelectExecutionPlanner {
     if (!isMinimalQuery(info)) {
       return false;
     }
-    result.chain(new CountFromIndexStep(targetIndex, info.projection.getAllAliases().getFirst(), context));
+    result.chain(new CountFromIndexStep(targetIndex, info.projection.getAllAliases().get(0), context));
     return true;
   }
 
@@ -462,7 +462,7 @@ public class SelectExecutionPlanner {
         || info.projection.getItems().size() != 1) {
       return false;
     }
-    final ProjectionItem item = info.aggregateProjection.getItems().getFirst();
+    final ProjectionItem item = info.aggregateProjection.getItems().get(0);
     return item.getExpression().toString().equalsIgnoreCase("count(*)");
   }
 
@@ -494,7 +494,7 @@ public class SelectExecutionPlanner {
         || projection.getItems().size() != 1) {
       return false;
     }
-    final ProjectionItem item = aggregateProjection.getItems().getFirst();
+    final ProjectionItem item = aggregateProjection.getItems().get(0);
     return item.getExpression().isCount();
   }
 
@@ -547,7 +547,7 @@ public class SelectExecutionPlanner {
       return false;
 
     // Create the optimized execution step
-    result.chain(new MaxMinFromIndexStep(index, info.projection.getAllAliases().getFirst(), maxMinInfo.isMax, context));
+    result.chain(new MaxMinFromIndexStep(index, info.projection.getAllAliases().get(0), maxMinInfo.isMax, context));
     return true;
   }
 
@@ -575,12 +575,12 @@ public class SelectExecutionPlanner {
     // Ensure the projection expression is purely a function call (e.g., max(id)), not a compound
     // expression like max(id)+1. If the projection has additional arithmetic, the index-optimized
     // path would skip those operations and return wrong results.
-    final ProjectionItem projItem = info.projection.getItems().getFirst();
+    final ProjectionItem projItem = info.projection.getItems().get(0);
     final Expression projExp = projItem.getExpression();
     if (projExp.getMathExpression() == null || !(projExp.getMathExpression() instanceof BaseExpression))
       return null;
 
-    final ProjectionItem aggregateItem = info.aggregateProjection.getItems().getFirst();
+    final ProjectionItem aggregateItem = info.aggregateProjection.getItems().get(0);
     final Expression exp = aggregateItem.getExpression();
 
     if (exp.getMathExpression() == null || !(exp.getMathExpression() instanceof BaseExpression base))
@@ -606,7 +606,7 @@ public class SelectExecutionPlanner {
       return null;
 
     // Get the property name from the pre-aggregate projection
-    final ProjectionItem preAggItem = info.preAggregateProjection.getItems().getFirst();
+    final ProjectionItem preAggItem = info.preAggregateProjection.getItems().get(0);
     final Expression preAggExp = preAggItem.getExpression();
 
     if (preAggExp.getMathExpression() == null || !(preAggExp.getMathExpression() instanceof BaseExpression preAggBase))
@@ -631,7 +631,7 @@ public class SelectExecutionPlanner {
     for (final TypeIndex index : indexes) {
       // Must be a single-property index on the exact property
       final List<String> propNames = index.getPropertyNames();
-      if (propNames.size() == 1 && propNames.getFirst().equals(propertyName)) {
+      if (propNames.size() == 1 && propNames.get(0).equals(propertyName)) {
         // Must support ordered iterations (RangeIndex like LSM_TREE)
         if (index.supportsOrderedIterations())
           return index;
@@ -794,7 +794,7 @@ public class SelectExecutionPlanner {
   private static void addOrderByProjections(final QueryPlanningInfo info) {
     if (info.orderApplied || info.expand || info.unwind != null || info.orderBy == null || info.orderBy.getItems().size() == 0
         || info.projection == null || info.projection.getItems() == null || (info.projection.getItems().size() == 1
-        && info.projection.getItems().getFirst().isAll())) {
+        && info.projection.getItems().get(0).isAll())) {
       return;
     }
 
@@ -830,7 +830,7 @@ public class SelectExecutionPlanner {
   private static void addUnwindProjections(final QueryPlanningInfo info) {
     if (info.unwind == null || info.unwind.getItems() == null || info.unwind.getItems().isEmpty()
         || info.projection == null || info.projection.getItems() == null || (info.projection.getItems().size() == 1
-        && info.projection.getItems().getFirst().isAll())) {
+        && info.projection.getItems().get(0).isAll())) {
       return;
     }
 
@@ -1360,7 +1360,7 @@ public class SelectExecutionPlanner {
       return result;
 
     //TODO optimization: merge multiple conditions
-    for (final BooleanExpression booleanExpression : flattenedWhereClause.getFirst().getSubBlocks()) {
+    for (final BooleanExpression booleanExpression : flattenedWhereClause.get(0).getSubBlocks()) {
       if (isRidRange(booleanExpression, context)) {
         result.getSubBlocks().add(booleanExpression.copy());
       }
@@ -1504,7 +1504,7 @@ public class SelectExecutionPlanner {
       } else if (info.flattenedWhereClause.size() > 1) {
         throw new CommandExecutionException("Index queries with this kind of condition are not supported yet: " + info.whereClause);
       } else {
-        final AndBlock andBlock = info.flattenedWhereClause.getFirst();
+        final AndBlock andBlock = info.flattenedWhereClause.get(0);
         if (andBlock.getSubBlocks().size() == 1) {
 
           info.whereClause = null;//The WHERE clause won't be used anymore, the index does all the filtering
@@ -1871,7 +1871,7 @@ public class SelectExecutionPlanner {
     if (info.flattenedWhereClause == null || info.flattenedWhereClause.size() != 1)
       return false; // only handle simple AND conditions (single flattened block, no OR)
 
-    final AndBlock andBlock = info.flattenedWhereClause.getFirst();
+    final AndBlock andBlock = info.flattenedWhereClause.get(0);
     final String edgeTypeName = docType.getName();
 
     // Look for @out = <RID> or @in = <RID> in the WHERE conditions
@@ -2773,7 +2773,7 @@ public class SelectExecutionPlanner {
           nullPlan.chain(new FetchFromTypeExecutionStep(queryTarget.getStringValue(), filterClusters, context, true));
 
           // Create IS NULL filter for the first indexed property
-          final String propertyName = indexFields.getFirst();
+          final String propertyName = indexFields.get(0);
           final IsNullCondition isNullCondition = new IsNullCondition(-1);
           final Expression expr = new Expression(new Identifier(propertyName));
           isNullCondition.setExpression(expr);
@@ -2849,7 +2849,7 @@ public class SelectExecutionPlanner {
     final List<DocumentType> stack = new ArrayList<>();
     stack.add(typez);
     while (!stack.isEmpty()) {
-      final DocumentType current = stack.removeFirst();
+      final DocumentType current = stack.remove(0);
       traversed.add(current);
       for (final DocumentType sub : current.getSubTypes()) {
         if (traversed.contains(sub))
@@ -2931,7 +2931,7 @@ public class SelectExecutionPlanner {
       final QueryPlanningInfo info, final CommandContext context, List<IndexSearchDescriptor> optimumIndexSearchDescriptors) {
     List<ExecutionStepInternal> result;
     if (optimumIndexSearchDescriptors.size() == 1) {
-      final IndexSearchDescriptor desc = optimumIndexSearchDescriptors.getFirst();
+      final IndexSearchDescriptor desc = optimumIndexSearchDescriptors.get(0);
       result = new ArrayList<>();
 
       final Boolean orderAsc = getOrderDirection(info);
@@ -3015,8 +3015,8 @@ public class SelectExecutionPlanner {
       if (orderItems.isEmpty()) {
         return true;//nothing to sort, the conditions completely overlap the ORDER BY
       }
-      if (s.equals(orderItems.getFirst())) {
-        orderItems.removeFirst();
+      if (s.equals(orderItems.get(0))) {
+        orderItems.remove(0);
         overlapping = true; //start overlapping
       } else if (overlapping) {
         return false; //overlapping, but next order item does not match...
@@ -3142,7 +3142,7 @@ public class SelectExecutionPlanner {
     if (sortedDescriptors.isEmpty()) {
       descriptors = Collections.emptyList();
     } else {
-      descriptors = sortedDescriptors.stream().filter(x -> x.getFirst().equals(sortedDescriptors.getFirst().getFirst()))
+      descriptors = sortedDescriptors.stream().filter(x -> x.getFirst().equals(sortedDescriptors.get(0).getFirst()))
           .map(Pair::getSecond).collect(Collectors.toList());
     }
 
@@ -3150,7 +3150,7 @@ public class SelectExecutionPlanner {
     descriptors = descriptors.stream().sorted(Comparator.comparingInt(x -> x.blockCount())).collect(Collectors.toList());
 
     // get the one that has more indexed fields
-    return descriptors.isEmpty() ? null : descriptors.getLast();
+    return descriptors.isEmpty() ? null : descriptors.get(descriptors.size() - 1);
   }
 
   /**
@@ -3251,7 +3251,7 @@ public class SelectExecutionPlanner {
           .toList();
 
       // get only the descriptors with the lowest cost
-      final int lowestCost = sortedDescriptors.getFirst().getFirst();
+      final int lowestCost = sortedDescriptors.get(0).getFirst();
       descriptors = sortedDescriptors.stream()
           .filter(x -> x.getFirst().equals(lowestCost))
           .map(x -> x.getSecond())
@@ -3259,7 +3259,7 @@ public class SelectExecutionPlanner {
     }
 
     // Return the first descriptor (all remaining have same subBlocks size and cost)
-    return descriptors.getFirst();
+    return descriptors.get(0);
   }
 
   /**
@@ -3643,7 +3643,7 @@ public class SelectExecutionPlanner {
       info.orderApplied = true;
 
     if (buckets.size() == 1) {
-      final Bucket parserBucket = buckets.getFirst();
+      final Bucket parserBucket = buckets.get(0);
 
       Integer bucketId = parserBucket.getBucketNumber();
       if (bucketId == null) {
@@ -3757,7 +3757,7 @@ public class SelectExecutionPlanner {
       return false;
 
     if (info.orderBy.getItems().size() == 1) {
-      OrderByItem item = info.orderBy.getItems().getFirst();
+      OrderByItem item = info.orderBy.getItems().get(0);
       String recordAttr = item.getRecordAttr();
       return recordAttr != null && recordAttr.equalsIgnoreCase(RID_PROPERTY) && OrderByItem.DESC.equals(item.getType());
     }
@@ -3772,7 +3772,7 @@ public class SelectExecutionPlanner {
       return false;
 
     if (info.orderBy.getItems().size() == 1) {
-      final OrderByItem item = info.orderBy.getItems().getFirst();
+      final OrderByItem item = info.orderBy.getItems().get(0);
       final String recordAttr = item.getRecordAttr();
       return recordAttr != null && recordAttr.equalsIgnoreCase(RID_PROPERTY) && (item.getType() == null || OrderByItem.ASC.equals(
           item.getType()));
@@ -3846,7 +3846,7 @@ public class SelectExecutionPlanner {
 
     if (item.getRids() != null && !item.getRids().isEmpty()) {
       if (item.getRids().size() == 1) {
-        final PInteger bucket = item.getRids().getFirst().getBucket();
+        final PInteger bucket = item.getRids().get(0).getBucket();
         buckets.add(db.getSchema().getBucketById(bucket.getValue().intValue()).getName());
       } else {
         for (final Rid rid : item.getRids()) {
