@@ -170,7 +170,7 @@ public class ArcadeGraph implements Graph, Closeable {
 
         final String[] hosts = new String[remoteAddresses.size()];
         for (int i = 0; i < remoteAddresses.size(); i++)
-          hosts[i] = HostUtil.parseHostAddress(remoteAddresses.getFirst(), "" + GREMLIN_SERVER_PORT)[0];
+          hosts[i] = HostUtil.parseHostAddress(remoteAddresses.get(0), "" + GREMLIN_SERVER_PORT)[0];
 
         final GraphBinaryMessageSerializerV1 serializer = new GraphBinaryMessageSerializerV1(
             new TypeSerializerRegistry.Builder().addRegistry(new ArcadeIoRegistry()));
@@ -289,20 +289,18 @@ public class ArcadeGraph implements Graph, Closeable {
 
     for (final Object o : vertexIds) {
       final RID rid;
-      switch (o) {
-        case RID iD -> rid = iD;
-        case Vertex vertex -> {
-          final Object objectId = vertex.id();
-          if (objectId != null)
-            rid = objectId instanceof RID rid1 ? rid1 : new RID(objectId.toString());
-          else
-            continue;
-        }
-        case String string -> rid = new RID(string);
-        case null, default -> {
+      if (o instanceof RID)
+        rid = (RID) o;
+      else if (o instanceof Vertex) {
+        final Object objectId = ((Vertex) o).id();
+        if (objectId != null)
+          rid = objectId instanceof RID ? (RID) objectId : new RID(objectId.toString());
+        else
           continue;
-        }
-      }
+      } else if (o instanceof String)
+        rid = new RID((String) o);
+      else
+        continue;
 
       try {
         final Record r = database.lookupByRID(rid, true);
@@ -358,20 +356,18 @@ public class ArcadeGraph implements Graph, Closeable {
 
     for (final Object o : edgeIds) {
       final RID rid;
-      switch (o) {
-        case RID iD -> rid = iD;
-        case Edge edge -> {
-          final Object objectId = edge.id();
-          if (objectId != null)
-            rid = objectId instanceof RID rid1 ? rid1 : new RID(objectId.toString());
-          else
-            continue;
-        }
-        case String string -> rid = new RID(string);
-        case null, default -> {
+      if (o instanceof RID)
+        rid = (RID) o;
+      else if (o instanceof Edge) {
+        final Object objectId = ((Edge) o).id();
+        if (objectId != null)
+          rid = objectId instanceof RID ? (RID) objectId : new RID(objectId.toString());
+        else
           continue;
-        }
-      }
+      } else if (o instanceof String)
+        rid = new RID((String) o);
+      else
+        continue;
 
       try {
         final Record r = database.lookupByRID(rid, true);
